fixed overlap issue on chrome

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html {
       font-size: 55%; } }
   @media only screen and (max-width: 42.81em) {
     html {
-      font-size: 50%; } }
+      font-size: 55%; } }
 
 body {
   font-family: "Roboto", sans-serif;
@@ -27,7 +27,7 @@ body {
 .container {
   display: grid;
   grid-row-gap: 5vh;
-  grid-template-rows: 5vh 90vh repeat(2, min-content) min-content repeat(2, min-content);
+  grid-template-rows: 5vh minmax(min-content, 90vh) repeat(2, min-content) min-content repeat(2, min-content);
   grid-template-columns: [full-start] 1fr [center-start] repeat(8, [col-start] minmax(min-content, 15rem) [col-end]) [center-end] 1fr [full-end]; }
   @media only screen and (max-width: 65.625em) {
     .container {
@@ -125,7 +125,7 @@ li {
   grid-column: center-start / center-end;
   grid-row: 2;
   display: grid;
-  grid-template-rows: repeat(2, 45vh); }
+  grid-template-rows: 45vh minmax(min-content, 45vh); }
   @media only screen and (max-width: 65.625em) {
     .about {
       grid-template-rows: 30vh min-content; } }
@@ -368,6 +368,9 @@ li {
     max-width: 100rem;
     object-fit: cover;
     border-radius: 1.5rem; }
+  @media only screen and (max-width: 42.81em) {
+    .gallery img {
+      display: none; } }
 
 .footer {
   grid-column: center-start / center-end;
