--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -4,7 +4,7 @@
 
     // border: 1px dotted black;
     display: grid;
-    grid-template-rows: repeat(2, 45vh);
+    grid-template-rows: 45vh minmax(min-content, 45vh);
 
     @media only screen and (max-width: $bp-large) {
         grid-template-rows: 30vh min-content;
