--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -12,4 +12,12 @@
         object-fit: cover;
         border-radius: 1.5rem;
     }
+
+    @media only screen and (max-width: $bp-small) {
+
+        img {
+            display: none;
+        }
+
+    }
 }
